Opened 9 years ago

Closed 9 years ago

#4611 closed defect (fixed)

Input picture width (1058) is greater than stride (0)

Reported by: Dead J. Dona Owned by:
Priority: important Component: ffmpeg
Version: git-master Keywords: libx264 mov regression
Cc: deadjdona@gmail.com Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug: Input picture width (1058) is greater than stride ( 0)
How to reproduce:

C:\1>ffmpeg -i 1.wmv -vcodec h264 -acodec lib
vo_aacenc -b:a 48k -crf 25 -preset ultrafast -level 4 -vf "scale=trunc(iw/2)*2:t
runc(ih/2)*2" 2.mp4
ffmpeg version N-72776-g7c9fcdf Copyright (c) 2000-2015 the FFmpeg developers
  built with gcc 4.9.2 (GCC)
  configuration: --disable-static --enable-shared --enable-gpl --enable-version3
 --disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfig --ena
ble-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --e
nable-libbs2b --enable-libcaca --enable-libdcadec --enable-libfreetype --enable-
libgme --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmfx --en
able-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-l
ibopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --enable-l
ibsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvids
tab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis --enable-li
bvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --en
able-libxavs --enable-libxvid --enable-lzma --enable-decklink --enable-zlib
  libavutil      54. 27.100 / 54. 27.100
  libavcodec     56. 41.100 / 56. 41.100
  libavformat    56. 36.100 / 56. 36.100
  libavdevice    56.  4.100 / 56.  4.100
  libavfilter     5. 16.101 /  5. 16.101
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  2.100 /  1.  2.100
  libpostproc    53.  3.100 / 53.  3.100
Guessed Channel Layout for  Input Stream #0.0 : mono
Input #0, asf, from '1.wmv':
  Metadata:
    title           : 
    artist          : 
    copyright       : Copyright (C) 2012
    comment         : 
    WMFSDKNeeded    : 0.0.0.0000
    DeviceConformanceTemplate: @
    WMFSDKVersion   : 12.0.7601.17514
    IsVBR           : 0
  Duration: 00:00:01.16, start: 0.000000, bitrate: 209 kb/s
    Stream #0:0(eng): Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, 1 channels,
fltp, 48 kb/s
    Stream #0:1(eng): Video: mss2 (MSS2 / 0x3253534D), rgb24, 1058x473, 10000 kb
/s, 59.94 tbr, 1k tbn, 1k tbc
No pixel format specified, yuv444p for H.264 encoding chosen.
Use -pix_fmt yuv420p for compatibility with outdated media players.
[libx264 @ 000000000049d840] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2
AVX FMA3
[libx264 @ 000000000049d840] profile High 4:4:4 Predictive, level 4.0, 4:4:4 8-b
it
[libx264 @ 000000000049d840] 264 - core 146 r2538 121396c - H.264/MPEG-4 AVC cod
ec - Copyleft 2003-2015 - http://www.videolan.org/x264.html - options: cabac=0 r
ef=1 deblock=0:0:0 analyse=0:0 me=dia subme=0 psy=1 psy_rd=1.00:0.00 mixed_ref=0
 me_range=16 chroma_me=1 trellis=0 8x8dct=0 cqm=0 deadzone=21,11 fast_pskip=1 ch
roma_qp_offset=6 threads=1 lookahead_threads=1 sliced_threads=0 nr=0 decimate=1
interlaced=0 bluray_compat=0 constrained_intra=0 bframes=0 weightp=0 keyint=250
keyint_min=25 scenecut=0 intra_refresh=0 rc=crf mbtree=0 crf=25.0 qcomp=0.60 qpm
in=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=0
Output #0, mp4, to '2.mp4':
  Metadata:
    title           : 
    artist          : 
    copyright       : Copyright (C) 2012
    comment         : 
    WMFSDKNeeded    : 0.0.0.0000
    DeviceConformanceTemplate: @
    WMFSDKVersion   : 12.0.7601.17514
    IsVBR           : 0
    encoder         : Lavf56.36.100
    Stream #0:0(eng): Video: h264 (libx264) ([33][0][0][0] / 0x0021), yuv444p, 1
058x472, q=-1--1, 59.94 fps, 60k tbn, 59.94 tbc
    Metadata:
      encoder         : Lavc56.41.100 libx264
    Stream #0:1(eng): Audio: aac (libvo_aacenc) ([64][0][0][0] / 0x0040), 44100
Hz, mono, s16, 48 kb/s
    Metadata:
      encoder         : Lavc56.41.100 libvo_aacenc
Stream mapping:
  Stream #0:1 -> #0:0 (mss2 (native) -> h264 (libx264))
  Stream #0:0 -> #0:1 (wmav2 (native) -> aac (libvo_aacenc))
Press [q] to stop, [?] for help
[libvo_aacenc @ 000000000049ea60] Queue input is backward in time
[mp4 @ 000000000052b4a0] Non-monotonous DTS in output stream 0:1; previous: 7616
, current: 6578; changing to 7617. This may result in incorrect timestamps in th
e output file.
[mp4 @ 000000000052b4a0] Non-monotonous DTS in output stream 0:1; previous: 7617
, current: 7602; changing to 7618. This may result in incorrect timestamps in th
e output file.
[libx264 @ 000000000049d840] AVFrame.format is not set
[libx264 @ 000000000049d840] AVFrame.width or height is not set
[libx264 @ 000000000049d840] Input picture width (1058) is greater than stride (
0)
Video encoding failed
[libx264 @ 000000000049d840] frame I:1     Avg QP:22.00  size: 26719
[libx264 @ 000000000049d840] frame P:52    Avg QP:17.62  size:   268
[libx264 @ 000000000049d840] mb I  I16..4: 100.0%  0.0%  0.0%
[libx264 @ 000000000049d840] mb P  I16..4:  0.0%  0.0%  0.0%  P16..4:  0.8%  0.0
%  0.0%  0.0%  0.0%    skip:99.2%
[libx264 @ 000000000049d840] coded y,u,v intra: 10.0% 6.7% 7.1% inter: 0.3% 0.2%
 0.2%
[libx264 @ 000000000049d840] i16 v,h,dc,p: 82% 16%  2%  0%
[libx264 @ 000000000049d840] kb/s:367.94
[libvo_aacenc @ 000000000049ea60] 2 frames left in the queue on closing
Conversion failed!

Info output of input file

C:\1>ffmpeg -v 9 -loglevel 99 -i 1.wmv

ffmpeg version N-72776-g7c9fcdf Copyright (c) 2000-2015 the FFmpeg developers

built with gcc 4.9.2 (GCC)
configuration: --disable-static --enable-shared --enable-gpl --enable-version3

--disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfig --ena

ble-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --e
nable-libbs2b --enable-libcaca --enable-libdcadec --enable-libfreetype --enable-
libgme --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmfx --en
able-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-l
ibopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --enable-l
ibsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvids
tab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis --enable-li
bvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --en
able-libxavs --enable-libxvid --enable-lzma --enable-decklink --enable-zlib

libavutil 54. 27.100 / 54. 27.100
libavcodec 56. 41.100 / 56. 41.100
libavformat 56. 36.100 / 56. 36.100
libavdevice 56. 4.100 / 56. 4.100
libavfilter 5. 16.101 / 5. 16.101
libswscale 3. 1.101 / 3. 1.101
libswresample 1. 2.100 / 1. 2.100
libpostproc 53. 3.100 / 53. 3.100

Splitting the commandline.
Reading option '-v' ... matched as option 'v' (set logging level) with argument
'9'.
Reading option '-loglevel' ... matched as option 'loglevel' (set logging level)
with argument '99'.
Reading option '-i' ... matched as input file with argument '1.wmv'.
Finished splitting the commandline.
Parsing a group of options: global .
Applying option v (set logging level) with argument 9.
Successfully parsed a group of options.
Parsing a group of options: input file 1.wmv.

Successfully parsed a group of options.
Opening an input file: 1.wmv.
Probing asf score:100 size:2048
Probing mpegts score:-1094995529 size:2048
Probing msnwctcp score:-1 size:2048
[asf @ 0000000001c8ca80] Format asf probed with size=2048 and score=100
[asf @ 0000000001c8ca80] gpos mismatch our pos=24, end=26
[asf @ 0000000001c8ca80] 0 stream 1 name_len 12 type 2 len 2 <IsVBR>
[asf @ 0000000001c8ca80] 1 stream 1 name_len 52 type 0 len 6 <DeviceConforman
ceTemplate>
[asf @ 0000000001c8ca80] 2 stream 2 name_len 12 type 2 len 2 <IsVBR>
[asf @ 0000000001c8ca80] 3 stream 2 name_len 52 type 0 len 4 <DeviceConforman
ceTemplate>
[asf @ 0000000001c8ca80] gpos mismatch our pos=24, end=3858
[asf @ 0000000001c8ca80] Payload extension 50 2
[asf @ 0000000001c8ca80] gpos mismatch our pos=24, end=38
[asf @ 0000000001c8ca80] gpos mismatch our pos=24, end=254
[asf @ 0000000001c8ca80] gpos mismatch our pos=24, end=38
[asf @ 0000000001c8ca80] i=1, st->codec->codec_type:1, asf->dar 0:0 sar=0:1
[asf @ 0000000001c8ca80] i=2, st->codec->codec_type:0, asf->dar 0:0 sar=0:1
[asf @ 0000000001c8ca80] Before avformat_find_stream_info() pos: 6379 bytes read
:30465 seeks:0
[asf @ 0000000001c8ca80] parser not found for codec wmav2, packets or times may
be invalid.
[mss2 @ 0000000001cc69a0] Encoder version 2.1
[mss2 @ 0000000001cc69a0] 9 free colour(s)
[mss2 @ 0000000001cc69a0] Display dimensions 1058x473
[mss2 @ 0000000001cc69a0] Coded dimensions 1058x473
[mss2 @ 0000000001cc69a0] 10 frames per second
[mss2 @ 0000000001cc69a0] Bitrate 10000000 bps
[mss2 @ 0000000001cc69a0] Max. lead time 0 ms
[mss2 @ 0000000001cc69a0] Max. lag time 3 ms
[mss2 @ 0000000001cc69a0] Max. seek time 10 ms
[mss2 @ 0000000001cc69a0] Slice split -1
[mss2 @ 0000000001cc69a0] Used colours 256
[asf @ 0000000001c8ca80] packet: size=8000 padsize=3 left=7985
[asf demuxer @ 0000000001c9e5a0] key:1 stream:1 seq:1 offset:0 replic_size:10
[asf demuxer @ 0000000001c9e5a0] new packet: stream:1 key:1 packet_key:0 audio:0

size:10253

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:10253 o:0,0 l:7968 D
ATA:000000000223b260
[asf @ 0000000001c8ca80] packet: size=8000 padsize=667 left=7319
[asf demuxer @ 0000000001c9e5a0] key:1 stream:1 seq:1 offset:7968 replic_size:10

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:10253 o:7968,7968 l:22
85 DATA:000000000223b260
[asf demuxer @ 0000000001c9e5a0] key:0 stream:1 seq:2 offset:0 replic_size:10
[asf demuxer @ 0000000001c9e5a0] new packet: stream:1 key:0 packet_key:0 audio:0

size:67

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:67 o:0,0 l:67 DATA:0
000000001d1be80
[asf demuxer @ 0000000001c9e5a0] key:0 stream:1 seq:3 offset:0 replic_size:10
[asf demuxer @ 0000000001c9e5a0] new packet: stream:1 key:0 packet_key:0 audio:0

size:68

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:68 o:0,0 l:68 DATA:0
000000001d1ee80
[asf demuxer @ 0000000001c9e5a0] key:0 stream:1 seq:4 offset:0 replic_size:10
[asf demuxer @ 0000000001c9e5a0] new packet: stream:1 key:0 packet_key:0 audio:0

size:66

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:66 o:0,0 l:66 DATA:0
00000000223dac0
[asf demuxer @ 0000000001c9e5a0] key:0 stream:1 seq:5 offset:0 replic_size:10
[asf demuxer @ 0000000001c9e5a0] new packet: stream:1 key:0 packet_key:0 audio:0

size:49

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:49 o:0,0 l:49 DATA:0
000000001d0bbc0
[asf demuxer @ 0000000001c9e5a0] key:0 stream:1 seq:6 offset:0 replic_size:10
[asf demuxer @ 0000000001c9e5a0] new packet: stream:1 key:0 packet_key:0 audio:0

size:45

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:45 o:0,0 l:45 DATA:0
00000000223dd00
[asf demuxer @ 0000000001c9e5a0] key:0 stream:1 seq:7 offset:0 replic_size:10
[asf demuxer @ 0000000001c9e5a0] new packet: stream:1 key:0 packet_key:0 audio:0

size:52

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:52 o:0,0 l:52 DATA:0
00000000223de80
[asf demuxer @ 0000000001c9e5a0] key:0 stream:1 seq:8 offset:0 replic_size:10
[asf demuxer @ 0000000001c9e5a0] new packet: stream:1 key:0 packet_key:0 audio:0

size:7

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:7 o:0,0 l:7 DATA:000
000000223e020
[asf demuxer @ 0000000001c9e5a0] key:0 stream:0 seq:2 offset:0 replic_size:8
[asf demuxer @ 0000000001c9e5a0] new packet: stream:0 key:0 packet_key:0 audio:1

size:1115

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:1115 o:0,0 l:1115 DA
TA:000000000223e180
[asf @ 0000000001c8ca80] parser not found for codec wmav2, packets or times may
be invalid.
[asf demuxer @ 0000000001c9e5a0] key:0 stream:0 seq:3 offset:0 replic_size:8
[asf demuxer @ 0000000001c9e5a0] new packet: stream:0 key:0 packet_key:0 audio:1

size:1115

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:1115 o:0,0 l:1115 DA
TA:000000000223e720
[asf demuxer @ 0000000001c9e5a0] key:0 stream:0 seq:4 offset:0 replic_size:8
[asf demuxer @ 0000000001c9e5a0] new packet: stream:0 key:0 packet_key:0 audio:1

size:1115

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:1115 o:0,0 l:1115 DA
TA:00000000022a19c0
[asf demuxer @ 0000000001c9e5a0] key:0 stream:0 seq:5 offset:0 replic_size:8
[asf demuxer @ 0000000001c9e5a0] new packet: stream:0 key:0 packet_key:0 audio:1

size:1115

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:1115 o:0,0 l:1115 DA
TA:00000000022a1e80
[asf @ 0000000001c8ca80] packet: size=8000 padsize=5722 left=2264
[asf demuxer @ 0000000001c9e5a0] key:0 stream:0 seq:6 offset:0 replic_size:8
[asf demuxer @ 0000000001c9e5a0] new packet: stream:0 key:0 packet_key:0 audio:1

size:1115

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:1115 o:0,0 l:1115 DA
TA:00000000022a2b40
[asf demuxer @ 0000000001c9e5a0] key:0 stream:0 seq:7 offset:0 replic_size:8
[asf demuxer @ 0000000001c9e5a0] new packet: stream:0 key:0 packet_key:0 audio:1

size:1115

[asf demuxer @ 0000000001c9e5a0] READ PACKET s:8000 os:1115 o:0,0 l:1115 DA
TA:0000000001d203e0
[asf @ 0000000001c8ca80] rfps: 9.416667 0.018019

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 9.500000 0.014222
[asf @ 0000000001c8ca80] rfps: 9.583333 0.010977
[asf @ 0000000001c8ca80] rfps: 9.666667 0.008283
[asf @ 0000000001c8ca80] rfps: 9.750000 0.006141
[asf @ 0000000001c8ca80] rfps: 9.833333 0.004551
[asf @ 0000000001c8ca80] rfps: 9.916667 0.003512

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 10.000000 0.003024

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 10.083333 0.003089

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 10.166667 0.003705

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 10.250000 0.004872

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 10.333333 0.006591

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 10.416667 0.008862

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 10.500000 0.011685
[asf @ 0000000001c8ca80] rfps: 10.500000 0.011684
[asf @ 0000000001c8ca80] rfps: 10.583333 0.015058
[asf @ 0000000001c8ca80] rfps: 10.666667 0.018984
[asf @ 0000000001c8ca80] rfps: 19.666667 0.018203
[asf @ 0000000001c8ca80] rfps: 19.750000 0.015849
[asf @ 0000000001c8ca80] rfps: 19.833333 0.014047

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 19.916667 0.012797

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 20.000000 0.012098

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 20.083333 0.011951

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 20.166667 0.012355
[asf @ 0000000001c8ca80] rfps: 20.250000 0.013311
[asf @ 0000000001c8ca80] rfps: 20.333333 0.014819
[asf @ 0000000001c8ca80] rfps: 20.416667 0.016878
[asf @ 0000000001c8ca80] rfps: 20.500000 0.019489
[asf @ 0000000001c8ca80] rfps: 40.000000 0.017371
[asf @ 0000000001c8ca80] rfps: 50.000000 0.006224

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 60.000000 0.001127

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 80.000000 0.009078

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 120.000000 0.004506

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 240.000000 0.018024

Last message repeated 1 times

[asf @ 0000000001c8ca80] rfps: 59.940060 0.000699

Last message repeated 1 times

[asf @ 0000000001c8ca80] 0: start_time: 0.000 duration: 0.001
[asf @ 0000000001c8ca80] 1: start_time: 0.000 duration: 0.001
[asf @ 0000000001c8ca80] stream: start_time: 0.000 duration: 1.161 bitrate=209 k
b/s
[asf @ 0000000001c8ca80] After avformat_find_stream_info() pos: 30379 bytes read
:30465 seeks:0 frames:14
Guessed Channel Layout for Input Stream #0.0 : mono
Input #0, asf, from '1.wmv':

Metadata:

title :
artist :
copyright : Copyright (C) 2012
comment :
WMFSDKNeeded : 0.0.0.0000
DeviceConformanceTemplate: @
WMFSDKVersion : 12.0.7601.17514
IsVBR : 0

Duration: 00:00:01.16, start: 0.000000, bitrate: 209 kb/s

Stream #0:0(eng), 6, 1/1000: Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, 1

channels, fltp, 48 kb/s

Stream #0:1(eng), 8, 1/1000: Video: mss2, 1 reference frame (MSS2 / 0x325353

4D), rgb24(left), 1058x473, 1/1000, 10000 kb/s, 59.94 tbr, 1k tbn, 1k tbc
Successfully opened the file.
At least one output file must be specified
[AVIOContext @ 0000000001c95c40] Statistics: 30465 bytes read, 0 seeks

Attachments (1)

1.wmv (92.3 KB ) - added by Dead J. Dona 9 years ago.
Input file - failing conversion

Download all attachments as: .zip

Change History (5)

by Dead J. Dona, 9 years ago

Attachment: 1.wmv added

Input file - failing conversion

comment:1 by Carl Eugen Hoyos, 9 years ago

Component: undeterminedffmpeg
Keywords: libx264 mov regression added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Regression since 98c7729c - related to ticket #4119 and #4562

$ ffmpeg -i 1.wmv -acodec aac -strict -2 out.mov
ffmpeg version N-72837-g70af8a5 Copyright (c) 2000-2015 the FFmpeg developers
  built with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --enable-libx264
  libavutil      54. 27.100 / 54. 27.100
  libavcodec     56. 41.100 / 56. 41.100
  libavformat    56. 36.100 / 56. 36.100
  libavdevice    56.  4.100 / 56.  4.100
  libavfilter     5. 16.101 /  5. 16.101
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  2.100 /  1.  2.100
  libpostproc    53.  3.100 / 53.  3.100
Guessed Channel Layout for  Input Stream #0.0 : mono
Input #0, asf, from '1.wmv':
  Metadata:
    title           : Grabilla Captured Video
    artist          : http://grabilla.com
    copyright       : Copyright (C) 2012
    comment         : This video was captured with Grabilla
    WMFSDKNeeded    : 0.0.0.0000
    DeviceConformanceTemplate: @
    WMFSDKVersion   : 12.0.9600.17415
    IsVBR           : 0
  Duration: 00:00:13.58, start: 0.000000, bitrate: 55 kb/s
    Stream #0:0(eng): Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, 1 channels, fltp, 48 kb/s
    Stream #0:1(eng): Video: mss2 (MSS2 / 0x3253534D), rgb24, 463x292, 10000 kb/s, 1k tbr, 1k tbn, 1k tbc
No pixel format specified, yuv444p for H.264 encoding chosen.
Use -pix_fmt yuv420p for compatibility with outdated media players.
[libx264 @ 0x3a57160] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX
[libx264 @ 0x3a57160] profile High 4:4:4 Predictive, level 5.0, 4:4:4 8-bit
[libx264 @ 0x3a57160] 264 - core 135 - H.264/MPEG-4 AVC codec - Copyleft 2003-2013 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=4 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00
Output #0, mov, to 'out.mov':
  Metadata:
    title           : Grabilla Captured Video
    artist          : http://grabilla.com
    copyright       : Copyright (C) 2012
    comment         : This video was captured with Grabilla
    WMFSDKNeeded    : 0.0.0.0000
    DeviceConformanceTemplate: @
    WMFSDKVersion   : 12.0.9600.17415
    IsVBR           : 0
    encoder         : Lavf56.36.100
    Stream #0:0(eng): Video: h264 (libx264) (avc1 / 0x31637661), yuv444p, 463x292, q=-1--1, 1k fps, 16k tbn, 1k tbc
    Metadata:
      encoder         : Lavc56.41.100 libx264
    Stream #0:1(eng): Audio: aac (mp4a / 0x6134706D), 44100 Hz, mono, fltp, 128 kb/s
    Metadata:
      encoder         : Lavc56.41.100 aac
Stream mapping:
  Stream #0:1 -> #0:0 (mss2 (native) -> h264 (libx264))
  Stream #0:0 -> #0:1 (wmav2 (native) -> aac (native))
Press [q] to stop, [?] for help
[aac @ 0x3a54520] Queue input is backward in time
[mov @ 0x3a53800] Non-monotonous DTS in output stream 0:1; previous: 7168, current: 6130; changing to 7169. This may result in incorrect timestamps in the output file.
[mov @ 0x3a53800] Non-monotonous DTS in output stream 0:1; previous: 7169, current: 7154; changing to 7170. This may result in incorrect timestamps in the output file.
frame= 1044 fps=0.0 q=33.0 size=      35kB time=00:00:02.13 bitrate= 135.8kbits/s dup=1043 drop=0  frame=12051 fps=2173 q=33.0 size=     339kB time=00:00:11.99 bitrate= 231.9kbits/s dup=12049 drop=0[libx264 @ 0x3a57160] AVFrame.format is not set
[libx264 @ 0x3a57160] AVFrame.width or height is not set
[libx264 @ 0x3a57160] Input picture width (463) is greater than stride (0)
Video encoding failed
[libx264 @ 0x3a57160] frame I:53    Avg QP:21.33  size:  1606
[libx264 @ 0x3a57160] frame P:3285  Avg QP:14.07  size:    24
[libx264 @ 0x3a57160] frame B:9699  Avg QP:17.67  size:    16
[libx264 @ 0x3a57160] consecutive B-frames:  0.8%  0.0%  0.0% 99.2%
[libx264 @ 0x3a57160] mb I  I16..4:  0.2% 96.2%  3.6%
[libx264 @ 0x3a57160] mb P  I16..4:  0.0%  0.0%  0.0%  P16..4:  0.0%  0.0%  0.0%  0.0%  0.0%    skip:100.0%
[libx264 @ 0x3a57160] mb B  I16..4:  0.0%  0.0%  0.0%  B16..8:  0.0%  0.0%  0.0%  direct: 0.0%  skip:100.0%  L0: 0.0% L1:100.0% BI: 0.0%
[libx264 @ 0x3a57160] 8x8 transform intra:96.1% inter:100.0%
[libx264 @ 0x3a57160] coded y,u,v intra: 1.8% 1.5% 1.4% inter: 0.0% 0.0% 0.0%
[libx264 @ 0x3a57160] i16 v,h,dc,p: 22%  0% 78%  0%
[libx264 @ 0x3a57160] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 57% 27% 15%  0%  0%  0%  0%  0%  0%
[libx264 @ 0x3a57160] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 29% 24% 30%  1%  3%  3%  3%  2%  5%
[libx264 @ 0x3a57160] Weighted P-Frames: Y:0.0% UV:0.0%
[libx264 @ 0x3a57160] ref P L0: 73.1% 26.9%
[libx264 @ 0x3a57160] kb/s:193.63
[aac @ 0x3a54520] 2 frames left in the queue on closing
Conversion failed!

comment:2 by Dead J. Dona, 9 years ago

Cc: deadjdona@gmail.com added
Keywords: hevc added

added hevc tag, won't encode to x265 either.

comment:3 by Carl Eugen Hoyos, 9 years ago

Keywords: hevc removed

comment:4 by Michael Niedermayer, 9 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.